--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@types/jquery": "^2.0.41",
     "@types/tether": "^1.4.1",
     "angular2-jwt": "^0.2.2",
+    "angularfire2": "^4.0.0-rc.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "firebase": "^4.1.3",
     "jquery": "^3.1.1",
-    "tether": "^1.4.0",
     "rxjs": "^5.1.0",
+    "tether": "^1.4.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
