--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "angularfire2": "^4.0.0-rc.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
-    "firebase": "^4.1.3",
+    "firebase": "^4.2.0",
     "jquery": "^3.1.1",
+    "promise-polyfill": "^6.0.2",
     "rxjs": "^5.1.0",
     "tether": "^1.4.0",
     "zone.js": "^0.8.4"
